# 2022_CLOUD_EDGE_LEARNING

./: .gitignore  README.md  Snakefile  main.py  pyproject.toml  server.py
cloud2edge/communication/: receiver.py  sender.py  server.py
code/: create_simulation_data.py
data/raw/: simulation_cloud_data.pkl  simulation_edge_data.pkl  simulation_label_data.pkl
explore/: 20220221_develop_cloud2edge.ipynb
history/: cloud_history.pkl  edge_history.pkl  integrate_history.pkl
simulation/: README.md  create_simulation_data.py  simulation_base_model.py
split/: split_model.py
test/: test_create_simulation_data.py
utils/: save_load.py
