[tool.poetry]
name = "cloud_edge_vertical_learning"
version = "0.1.0"
description = ""
authors = ["MinDong <mdskylover@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.21.0"
matplotlib = "^3.4.3"
snakemake = "^6.8.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.3.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
